# ifm-aca-sample-app

./: Dockerfile  README.md  gunicorn.conf.py  main.py  pyproject.toml
infra/aca/: main.tf  variables.tf
infra/acaenvironment/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
